# Wolf-Krow

./: .gitignore  Cargo.toml  README.md  index.html  styles.css  ui_config.toml
.github/workflows/: tauri-leptos.yml
src/: add_node_button.rs  app.rs  graph_container.rs  main.rs  node_container.rs
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
src/components/ui/: dropdown_menu.rs  mod.rs  textarea.rs
style/: styles.css  tailwind.css
