[package]
name = "tauri-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.14", features = ["csr"] }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
js-sys = "0.3.82"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
reactive_stores = "0.3.0"

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'FocusEvent',
  'WheelEvent',
  'Node',
  'Window',
]
version = "0.3.82"

[workspace]
members = ["src-tauri"]
